--- a/ShopManagement/Views/Account/ResetPassword.cshtml
+++ b/ShopManagement/Views/Account/ResetPassword.cshtml
@@ -19,14 +19,9 @@
     <!-- Template CSS -->
     <link rel="stylesheet" href="../../assets/css/style.css">
     <link rel="stylesheet" href="../../assets/css/components.css">
-    <!-- Start GA -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-94034622-3"></script>
-    <script>window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-94034622-3');</script>
-    <!-- /END GA -->
+    <link rel="stylesheet" href="~/App-Assests/CSS/Custom.css">
+    <!-- CSS Libraries -->
+    <link rel="stylesheet" href="../../assets/modules/izitoast/css/iziToast.min.css">
 </head>
 
 <body>
@@ -43,21 +38,22 @@
                             <div class="card-header"><h4>Forgot Password</h4></div>
 
                             <div class="card-body">
-                                <p class="text-muted">We will send a link Password to your Email/Mobile Number</p>
-                                <form method="POST">
+                                <p class="text-muted">We will send a link Password to your Mobile Number</p>
+                                <form>
                                     <div class="form-group">
-                                        <label for="email">Mobile/Email</label>
-                                        <input id="email" type="email" class="form-control" name="email" tabindex="1" required autofocus>
+                                        <label for="number">Mobile</label>
+                                        <input id="number" type="number" class="form-control UserMobileNumber" name="number" tabindex="1">
                                     </div>
                                     <div class="float-right">
-                                        Got Password? then login 
+                                        Got Password? then login
                                         <a href="@Url.Action("Login", "Account")" class="text-small">
                                             here
                                         </a>
                                     </div>
                                     <br />
                                     <div class="form-group">
-                                        <button type="submit" class="btn btn-primary btn-lg btn-block" tabindex="4">
+                                        <span class="customErrorMessageForgotPassowrd text-danger"></span>
+                                        <button type="button" class="btn btn-primary btn-lg btn-block ForgotPassowrdFromSubmit" tabindex="4">
                                             Send Password
                                         </button>
                                     </div>
@@ -84,7 +80,9 @@
     <!-- Template JS File -->
     <script src="../../assets/js/scripts.js"></script>
     <script src="../../assets/js/custom.js"></script>
+    <script src="~/App-Assests/Js/Account.js"></script>
+    <script src="~/App-Assests/Js/Custom.js"></script>
+    <!-- JS Libraies -->
+    <script src="../../assets/modules/izitoast/js/iziToast.min.js"></script>
 </body>
-
-<!-- Mirrored from demo.getstisla.com/auth-reset-password.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 12 Mar 2021 16:03:43 GMT -->
 </html>
