--- a/ShopManagement/Views/Order/AddOrder.cshtml
+++ b/ShopManagement/Views/Order/AddOrder.cshtml
@@ -40,6 +40,7 @@
                             <div class="form-group">
                                 <label>Bill Number</label>
                                 <input type="text" class="form-control" id="BillNumber">
+                                <span class="BillNumberValidationMessage text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label>Customer Name</label>
@@ -49,12 +50,19 @@
                                 <label>Mobile Number</label>
                                 <input type="number" class="form-control" id="CustomerMobileNumber">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group" id="ShopSelectionDiv">
                                 <label>Choose shop</label>
                                 <select class="form-control select2" id="SelctedShopId">
                                     @foreach (var item in Model)
                                     {
-                                        <option value="@item.Id" data-addedCount="@item.TodaysOderCount" data-maxCount="@item.MaxOrderCount" data-remainingCount="@item.MaxOrderCount-@item.TodaysOderCount">@item.Name</option>
+                                        if (Session["IsAdmin"].ToString() == "1" || Session["IsAdmin"].ToString() == "2")
+                                        {
+                                            <option value="@item.Id" data-addedCount="@item.TodaysOderCount" data-maxCount="@item.MaxOrderCount" data-remainingCount="@item.MaxOrderCount-@item.TodaysOderCount">@item.Name</option>
+                                        }
+                                        else if (item.Id == Session["ShopId"].ToString())
+                                        {
+                                            <option value="@item.Id" data-addedCount="@item.TodaysOderCount" data-maxCount="@item.MaxOrderCount" data-remainingCount="@item.MaxOrderCount-@item.TodaysOderCount">@item.Name</option>
+                                        }
                                     }
                                 </select>
                             </div>
