--- a/ShopManagement/Views/User/AddUser.cshtml
+++ b/ShopManagement/Views/User/AddUser.cshtml
@@ -47,6 +47,7 @@
                                     </div>
                                     <input type="number" class="form-control UserMobileNumber">
                                 </div>
+                                <span class="MobileNumberValidationMessage text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label>Email Id</label>
